--- a/B Portfolio.html
+++ b/B Portfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/Boot.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
                 <a href="Bmain.html">About</a> |
         </li>
         <li>
-                <a href="B_Portfolio.html">Portfolio</a> |
+                <a href="B Portfolio.html">Portfolio</a> |
         </li>
         <li>
                 <a href="Bcontact.html">Contact</a>
