--- a/Bcontact.html
+++ b/Bcontact.html
@@ -9,23 +9,20 @@
     <link rel="stylesheet" href="./assets/Boot.css">
 </head>
 <body>
-    <header>
-        <h1>Angie B</h1>
-<nav>
-    <ul>
-        <li>
-                <a href="Bmain.html">About</a> |
-        </li>
-        <li>
-                <a href="B Portfolio.html">Portfolio</a> |
-        </li>
-        <li>
-                <a href="Bcontact.html">Contact</a>
-        </li>
-    </ul>
-    
-</nav>
-    </header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand  mb-1 h1">Angie B</a>
+                <a class="navbar-brand" href="">Angie B</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="Bmain.html">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="B portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="Bcontact.html">Contact</a>
+                  </div>
+                </div>
+        </nav>
     <main>
             <h2>Contact</h2>
             <hr>
