--- a/Bmain.html
+++ b/Bmain.html
@@ -12,30 +12,29 @@
 </head>
 
 <body>
-
-    <header>
-        <h1>Angie B</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Bmain.html">About</a> |
-                </li>
-                <li>
-                    <a href="B Portfolio.html">Portfolio</a> |
-                </li>
-                <li>
-                    <a href="Bcontact.html">Contact</a> 
-                </li>
-            </ul>
-
-        </nav>
-    </header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand mb-1 h1">Angie B</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="Bmain.html">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="B portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="Bcontact.html">Contact</a>
+                  </div>
+                </div>
+         </nav>
     <main>
 
         <h2>About Me</h2> 
         <hr>
-        <img src="https://a.1stdibscdn.com/a_11461/a_47066121563198008577/Jada_master.jpg?width=768" alt="culture"
-        id="culture">
+        <div class="row">
+        <div class="col-sm-3">
+                <img src="https://a.1stdibscdn.com/a_11461/a_47066121563198008577/Jada_master.jpg?width=768" alt="culture"
+                id="culture">
+        </div>
+        <div class="col-sm-9" style="width: 18rem";>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis laborum doloremque fugiat aperiam blanditiis
             similique pariatur accusamus, quis provident quidem mollitia doloribus, modi iusto error cupiditate. Tenetur
@@ -59,6 +58,8 @@
             assumenda saepe dicta.
           
         </p>
+        </div>
+    </div>
     </main>
     
     <footer> Copyright &copy; </footer>
