--- a/Bcontact.html
+++ b/Bcontact.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="./assets/Boot.css">
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand  mb-1 h1">Angie B</a>
-                <a class="navbar-brand" href="">Angie B</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -23,7 +22,8 @@
                   </div>
                 </div>
         </nav>
-    <main>
+    <main class="container">
+      <div class="col-sm-12">
             <h2>Contact</h2>
             <hr>
             <form>
@@ -37,6 +37,7 @@
                     <input id="submit" type="Submit" value="Submit"><br>
                    
             </form>
+        </div>
     </main>
     <footer> Copyright &copy; </footer>
 
